# wallflower

./: .clang-format  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  PKGBUILD  README.md  cabal.project.freeze  refactor_plan.md  setup.sh  wallflower.cabal  wallflower.desktop
.agents/skills/refactoring/: SKILL.md
app/: Colors.hs  ContentAreaManager.hs  DirectoryManager.hs  EventHandlers.hs  FileParser.hs  FontBindings.hs  HyprpaperManager.hs  ImageDimension.hs  LoggerGe.hs  Main.hs  MarkupInjector.hs  ResourceLoader.hs  Settings.hs  Tabs.hs  TemplateBuilder.hs  UiData.hs  Utilities.hs  Validator.hs  Wallpapers.hs
cbits/: font_loader.c
include/: bouncer.hpp  clay_renderer_raylib.c  colors.h  configuration.hpp  dropdown.hpp  hyprmanager.hpp  logger.hpp  settings.hpp  simplified_view.hpp  tabs.hpp  utils.hpp  wallpaper_dropdown.hpp  wallpapers.hpp
include/core/: base_msg.hpp  messages.hpp
include/data_managers/: configuration.hpp  settings.hpp  wallpapers.hpp
include/views/app/: app.hpp
include/views/gallery/: gallery.hpp
include/views/main/: main.hpp
include/views/root/: root.hpp
include/views/search_bar/: search_bar.hpp
include/wallflower/views/: action_bar.hpp  main_view.hpp
resources/: actions.ui  configuration.txt  settings.ui  style.css  wallpapers.ui  window.ui
resources/css/: style.css
resources/data/: directories.txt
resources/templates/: action.template  directory.template  image.template  tab.template
resources/ui/: actions.ui  directories.ui  images.ui  settings.ui  tab.ui  wallpapers.ui  window.ui
src/: Main.hs  ResourceLoader.hs  bouncer.cpp  configuration.cpp  dropdown.cpp  hyprmanager.cpp  logger.cpp  main.cpp  settings.cpp  simplified_view.cpp  tabs.cpp  utils.cpp  wallpaper_dropdown.cpp  wallpapers.cpp
src/core/: main.cpp
src/data_managers/: configuration.cpp  settings.cpp  settings.hpp  wallpapers.cpp
src/utils/: bouncer.cpp  logger.cpp  utils.cpp
src/views/: action_bar.cpp  main_view.cpp
src/views/app/: app.cpp
src/views/gallery/: gallery.cpp
src/views/main/: main.hpp  main_update.cpp  main_view.cpp
src/views/root/: root.cpp
src/views/search_bar/: search_bar.cpp
