cabal-version:       2.2

name:                wallflower
version:             0.1.0.0
synopsis:            GUI interface for managing background wallpapers for Hyprpaper.
description:         GUI interface for managing background wallpapers for Hyprpaper. Built using Haskell and Gtk4 bindings.
homepage:            https://github.com/githubuser/wallflower#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Warren Wu 
maintainer:          warrenwu.dev
copyright:           2025 Warren Wu 
category:            Desktop 
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     CHANGELOG.md

data-files:          resources/style.css, resources/window.ui, resources/images.ui

executable wallflower
  hs-source-dirs:      app 
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, gi-gtk4, gi-gio, haskell-gi-base, directory, filepath, split, gi-gdk, text == 2.0.2
  other-modules:       DirectoryManager, ResourceLoader, Paths_wallflower, MarkupInjector
  autogen-modules:     Paths_wallflower
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/wallflower
