cabal-version:       2.2

name:                wallflower
version:             0.1.0.0
synopsis:            GUI interface for managing background wallpapers for Hyprpaper.
description:         GUI interface for managing background wallpapers for Hyprpaper. Built using Haskell and Gtk4 bindings.
homepage:            https://github.com/githubuser/wallflower#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Warren Wu 
maintainer:          warrenwu.dev
copyright:           2025 Warren Wu 
category:            Desktop 
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     CHANGELOG.md

data-files:          resources/*

executable wallflower
  hs-source-dirs:      app 
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, 
                       gi-gtk4 == 4.0.12, 
                       gi-gio == 2.0.38, 
                       gi-gdk == 4.0.10,
                       haskell-gi-base == 0.26.9, 
                       directory == 1.3.8.5, 
                       filepath == 1.4.301.0, 
                       split == 0.2.5, 
                       text == 2.0.2, 
                       time == 1.12.2
  other-modules:       DirectoryManager, 
                       ResourceLoader, 
                       Paths_wallflower, 
                       MarkupInjector, 
                       Validator,
                       LoggerGe,
                       ContentAreaManager,
                       Utilities
  autogen-modules:     Paths_wallflower
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/wallflower
