cabal-version:       2.2

name:                wallflower
version:             0.1.0.0
synopsis:            GUI interface for managing background wallpapers for Hyprpaper.
description:         GUI interface for managing background wallpapers for Hyprpaper. Built using Haskell and Gtk4 bindings.
homepage:            https://github.com/githubuser/wallflower#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Warren Wu 
maintainer:          warrenwu.dev
copyright:           2025 Warren Wu 
category:            Desktop 
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     CHANGELOG.md

data-files:          resources/*

executable wallflower
  hs-source-dirs:      app 
  main-is:             Main.hs
  default-language:    Haskell2010
  cxx-sources:         external/image_utils.cpp
  extra-libraries:     stdc++
  build-depends:       base >= 4 && < 5, 
                       haskell-gi-base,
                       directory, 
                       filepath, 
                       split, 
                       text, 
                       time,
                       process,
                       monomer,
                       lens,
                       bytestring,
                       binary,
                       tinyfiledialogs
  other-modules:       DirectoryManager, 
                       Paths_wallflower, 
                       Validator,
                       LoggerGe,
                       Utilities,
                       HyprpaperManager,
                       UiData,
                       FileParser,
                       Tabs,
                       Wallpapers,
                       Settings,
                       Colors,
                       ImageDimension
  autogen-modules:     Paths_wallflower
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/wallflower
